syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.cache_client";
option csharp_namespace = "Momento.Protos.CachePing";

package cache_client;

service Ping {
  rpc Ping (_PingRequest) returns (_PingResponse) {}
}

message _PingRequest {}
message _PingResponse {}
