syntax = "proto3";

option go_package = "github.com/momentohq/client-sdk-go;client_sdk_go";
option java_multiple_files = true;
option java_package = "grpc.control_client";
option csharp_namespace = "Momento.Protos.ControlClient";

package control_client;

service ScsControl {
  rpc CreateCache (_CreateCacheRequest) returns (_CreateCacheResponse) {}
  rpc DeleteCache (_DeleteCacheRequest) returns (_DeleteCacheResponse) {}
  rpc ListCaches (_ListCachesRequest) returns (_ListCachesResponse) {}
  rpc FlushCache (_FlushCacheRequest) returns (_FlushCacheResponse) {}
  rpc CreateSigningKey (_CreateSigningKeyRequest) returns (_CreateSigningKeyResponse) {}
  rpc RevokeSigningKey (_RevokeSigningKeyRequest) returns (_RevokeSigningKeyResponse) {}
  rpc ListSigningKeys (_ListSigningKeysRequest) returns (_ListSigningKeysResponse) {}
  rpc GenerateToken(_GenerateTokenRequest) returns (_GenerateTokenResponse) {}
}

message _DeleteCacheRequest {
  string cache_name = 1;
}

message _DeleteCacheResponse {
}

message _CreateCacheRequest {
  string cache_name = 1;
}

message _CreateCacheResponse {
}

message _ListCachesRequest {
  string next_token = 1;
}

message _Cache {
  string cache_name = 1;
}

message _ListCachesResponse {
  repeated _Cache cache = 1;
  string next_token = 2;
}

message _CreateSigningKeyRequest {
  uint32 ttl_minutes = 1;
}

message _CreateSigningKeyResponse {
  string key = 1;
  uint64 expires_at = 2;
}

message _RevokeSigningKeyRequest {
  string key_id = 1;
}

message _RevokeSigningKeyResponse {
}

message _SigningKey {
  // The id of the signing key
  string key_id = 1;
  // Epoch time in seconds when the signing key expires
  uint64 expires_at = 2;
}

message _ListSigningKeysRequest {
  string next_token = 1;
}

message _ListSigningKeysResponse {
  repeated _SigningKey signing_key = 1;
  string next_token = 2;
}

message _FlushCacheRequest {
  string cache_name = 1;
}

message _FlushCacheResponse {

}

message _GenerateTokenRequest {
  string session_token = 1;
  uint64 expire_at = 2;
  string subject = 3;
}

message _GenerateTokenResponse {
  string api_token = 1;
  string refresh_token = 2;
  string endpoint = 3;
  uint64 valid_until = 4;
}
